# nicedeck

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  main.py  notes.md  pyproject.toml  style.css  test.py
nicedeck/: __init__.py  _deck.py  _event.py  _slide.py  code.py  content.py  deck.py  note.py  overview.py  run.py  slide.py  step.py  timer.py
talks/pycon-germany-2026/: README.md  main.py  outline.md  pyproject.toml  windows.py
talks/pycon-germany-2026/snippets/: intro_justpy.py  intro_streamlit.py  simple_streamlit.py
talks/pycon-ireland-2023/: README.md  main.py  pyproject.toml
